# simple-string-patterns

./: Cargo.toml  README.md
src/: alphanumeric.rs  bounds_builder.rs  char_type.rs  enclose.rs  enums.rs  lib.rs  segments.rs  simple_match.rs  to_strings.rs  utils.rs
tests/: integration_tests.rs
