[package]
name = "simple-string-patterns"
version = "0.1.0"
edition = "2021"
description = "Makes it easier to match, split and extract strings in Rust without regular expressions. The parallel string-patterns crate provides extensions to work with regular expressions via the Regex library"
repository = "https://github.com/neilg63/simple-string-patterns"
categories = ["text-processing", "parsing"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

